# sports-planner

./: .env  .gitignore  Cargo.toml  IDEAS.MD  README.MD  package-lock.json  package.json
migrations/: 100_create_initial.down.sql  100_create_initial.up.sql  10_create_config.up.sql  20250929232717_create_notes_table.up.sql  20250930152953_create_orgs.up.sql  20250930152954_create_users.up.sql  20251001075914_create_sessions.up.sql  20251003151541_create_role_assignments.down.sql  20251003151541_create_role_assignments.up.sql  20_create_clubs.up.sql  2_create_orgs.up.sql  30_create_users.up.sql  3_create_users.up.sql  50_create_role_assignments.up.sql  5_create_role_assignments.down.sql  5_create_role_assignments.up.sql  60_create_service_invites.down.sql  6_create_service_invites.up.sql  7_create_games.down.sql  7_create_games.up.sql  7_create_teams.up.sql  8_create_games.up.sql
pg/: docker-compose.yaml
src/: main.rs
src/auth/: auth_routes.rs  middlewares.rs  mod.rs  roles.rs  routes.rs  utils.rs
src/entities/: auth.rs  club.rs  game.rs  game_invite.rs  mod.rs  note.rs  org.rs  service_invite.rs  team.rs  user.rs
src/utils/: api.rs  initial_setup.rs  mod.rs
test/: .env  auth.test.ts  big-ol-cycle.test.ts  package-lock.json  package.json  team.test.ts  tsconfig.json  users.test.ts  utils.ts
test/utils/: client.ts  env.ts
ts-api-tests/: .env  auth.test.ts  big-ol-cycle.test.ts  jest.config.js  package.json  team.test.ts  users.test.ts
ts-api-tests/utils/: auth.ts  general.ts  test-client.ts
ts-frontend/: .env  index.html  package.json
ts-frontend/src/: app.css  main.ts  pico.yellow.css  style.css
ts-frontend/src/client/: auth.ts  fe-client.ts
ts-frontend/src/components/: App.svelte  Form.svelte  Home.svelte  Login.svelte  (+2 more)
ts-shared/: index.ts  package.json
ts-shared/client/: auth.ts  client.ts
(+13 files in other folders)
