[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tower-layer = "0.3.3"

[features]
server = []
web = []
