[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.3", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "postgres",
    "runtime-tokio-native-tls",
] }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["normalize-path"] }
tower-layer = "0.3.3"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
server = []
web = []
